--- a/survey.html
+++ b/survey.html
@@ -25,36 +25,36 @@
 		
 		<label for="state">State</label>
 		<select name="state">
-			<option name="sc" value="sc">South Carolina</option>
-			<option name="nc" value="nc">North Carolina</option>
-			<option name="ga" value="ga">Georgia</option>
-			<option name="fl" value="fl">Florida</option>
-			<option name="al" value="al">Alabama</option>
-			<option name="tn" value="tn">Tennessee</option>
+			<option name="sc" value="sc" id="sc">South Carolina</option>
+			<option name="nc" value="nc" id="nc">North Carolina</option>
+			<option name="ga" value="ga" id="ga">Georgia</option>
+			<option name="fl" value="fl" id="fl">Florida</option>
+			<option name="al" value="al" id="al">Alabama</option>
+			<option name="tn" value="tn" id="tn">Tennessee</option>
 		</select>
 		</fieldset>
 
 		<fieldset>
 		<label for="age">Age</label>
 		<select name="age">
-			<option name="zeroseventeen" value="zeroseventeen">0-17</option>
-			<option name="eighteenthirtyfour" value="eighteenthirtyfour">18-34</option>
-			<option name="overthirtyfive" value="overthirtyfive">over 35</option>
+			<option name="zeroseventeen" value="zeroseventeen" id="zeroseventeen">0-17</option>
+			<option name="eighteenthirtyfour" value="eighteenthirtyfour" id="eighteenthirtyfour">18-34</option>
+			<option name="overthirtyfive" value="overthirtyfive" id="overthirtyfive">over 35</option>
 		</select>
 
 		<label for="ethnicity">Ethnicity</label>
 		<select name="ethnicity">
-			<option name="caucasian" value="caucasian">Caucasian</option>
-			<option name="hispanic" value="hispanic">Hispanic</option>
-			<option name="africanamerican" value="africanamerican">African-American</option>
-			<option name="other" value="other">Other</option>
-			<option name="dontanswer" value="dontanswer">Don't Answer</option>
+			<option name="caucasian" value="caucasian" id="caucasian">Caucasian</option>
+			<option name="hispanic" value="hispanic" id="hispanic">Hispanic</option>
+			<option name="africanamerican" value="africanamerican" id="africanamerican">African-American</option>
+			<option name="other" value="other" id="other">Other</option>
+			<option name="dontanswer" value="dontanswer" id="dontanswer">Don't Answer</option>
 		</select>
 
 		<label for="gender">Gender</label>
 		<select name="gender">
-			<option name="male" value="male">Male</option>
-			<option name="female" value="female">Female</option>
+			<option name="male" value="male" id="male">Male</option>
+			<option name="female" value="female" id="female">Female</option>
 		</select>
 	
 		</fieldset>
@@ -63,88 +63,88 @@
 			<p>1. In the last 12 months, how many films have you seen in theaters?</p>
 			
 			<label for="zerofive">0-5</label>
-			<input type="radio" name="film" value="zerofive">
+			<input type="radio" name="film" value="zerofive" id="zerofive">
 			<label for="sixten">6-10</label>
-			<input type="radio" name="film" value="sixten">
+			<input type="radio" name="film" value="sixten" id="sixten">
 			<label for="morethanten">more than 10</label>
-			<input type="radio" name="film" value="morethanten">
+			<input type="radio" name="film" value="morethanten" id="morethanten">
 		</fieldset>
 
 		<fieldset>
 			<p>2. In the last 12 months, what genres of movies have you seen in theater? (Select all that apply)</p>
 			<label for="actionadventure">Action-Adventure</label>
-			<input type="checkbox" name="genres" value="actionadventure">
+			<input type="checkbox" name="genres" value="actionadventure" id="actionadventure">
 			
 			<label for="scifi">Sci-Fi</label>
-			<input type="checkbox" name="genres" value="scifi">
+			<input type="checkbox" name="genres" value="scifi" id="scifi">
 			
 			<label for="comedy">Comedy</label>
-			<input type="checkbox" name="genres" value="comedy">
+			<input type="checkbox" name="genres" value="comedy" id="comedy">
 			
 			<label for="thriller">Thriller</label>
-			<input type="checkbox" name="genres" value="thriller">
+			<input type="checkbox" name="genres" value="thriller" id="thriller">
 			
 			<label for="musical">Musical</label>
-			<input type="checkbox" name="genres" value="musical">
+			<input type="checkbox" name="genres" value="musical" id="musical">
 			
 			<label for="animated">Animated</label>
-			<input type="checkbox" name="genres" value="animated">
+			<input type="checkbox" name="genres" value="animated" id="animated">
 			
 			<label for="horror">Horror</label>
-			<input type="checkbox" name="genres" value="horror">
+			<input type="checkbox" name="genres" value="horror" id="horror">
 			
 			<label for="family">Family</label>
-			<input type="checkbox" name="genres" value="family">
+			<input type="checkbox" name="genres" value="family" id="family">
 			
 			<label for="documentary">Documentary</label>
-			<input type="checkbox" name="genres" value="documentary">
+			<input type="checkbox" name="genres" value="documentary" id="documentary">
 			
 		</fieldset>
 		<fieldset>
 			<p>3. If you like watching movies in the theatre, how likely are you to buy the DVD/Blu-ray layer?</p>
 			<label for="verylikely">Very likely</label>
-			<input type="radio" name="dvd" value="verylikely">
+			<input type="radio" name="dvd" value="verylikely" id="verylikely">
 			
 			<label for="somewhatlikely">Somewhat likely</label>
-			<input type="radio" name="dvd" value="somewhatlikely">
+			<input type="radio" name="dvd" value="somewhatlikely" id="somewhatlikely">
 			
 			<label for="notverylikely">Not very likely</label>
-			<input type="radio" name="dvd" value="notverylikely">
+			<input type="radio" name="dvd" value="notverylikely" id="notverylikely">
 
 			<label for="notlikelyatall">Not likely at all</label>
-			<input type="radio" name="dvd" value="notlikelyatall">
+			<input type="radio" name="dvd" value="notlikelyatall" id="notlikelyatall">
 
 		</fieldset>
 
 		<fieldset>
 			<p>4. Which of the following aspects do you consider most important to a good movie?</p>
 			<label for="casting">Casting</label>
-			<input type="radio" name="aspects" value="casting">
+			<input type="radio" name="aspects" value="casting" id="notlikelyatall">
 			
 			<label for="writing">Writing</label>
-			<input type="radio" name="aspects" value="writing">
+			<input type="radio" name="aspects" value="writing" id="writing">
 			
 			<label for="specialeffects">Special Effects</label>
-			<input type="radio" name="aspects" value="specialeffects">
+			<input type="radio" name="aspects" value="specialeffects" id="specialeffects">
 
 			<label for="directing">Directing</label>
-			<input type="radio" name="aspects" value="directing">
+			<input type="radio" name="aspects" value="directing" id="directing">
 
 			
 		</fieldset>
 		<fieldset>
 			<p>5. How likely are you to watch a movie during it's opening weekend?</p>
 			<label for="verylikely">Very likely</label>
-			<input type="radio" name="open" value="verylikely">
+			<input type="radio" name="open" value="verylikely" id="verylikely">
 			
 			<label for="somewhatlikely">Somewhat likely</label>
-			<input type="radio" name="open" value="somewhatlikely">
+			<input type="radio" name="open" value="somewhatlikely" id="somewhatlikely">
 			
 			<label for="notverylikely">Not very likely</label>
-			<input type="radio" name="open" value="notverylikely">
+			<input type="radio" name="open" value="notverylikely" id="notverylikely">
 
 			<label for="notlikelyatall">Not likely at all</label>
-			<input type="radio" name="open" value="notlikelyatall">
+			<input type="radio" name="open" value="notlikelyatall" id="notlikelyatall">
 
 		</fieldset>
 		
@@ -162,16 +162,16 @@
 		<fieldset>
 			<p>8. How likely are you to see a movie in theatres a second time?</p>
 			<label for="verylikely">Very likely</label>
-			<input type="radio" name="secondtime" value="verylikely">
+			<input type="radio" name="secondtime" value="verylikely" id="verylikely">
 			
 			<label for="somewhatlikely">Somewhat likely</label>
-			<input type="radio" name="secondtime" value="somewhatlikely">
+			<input type="radio" name="secondtime" value="somewhatlikely" id="somewhatlikely">
 			
 			<label for="notverylikely">Not very likely</label>
-			<input type="radio" name="secondtime" value="notverylikely">
+			<input type="radio" name="secondtime" value="notverylikely" id="notverylikely">
 
 			<label for="notlikelyatall">Not likely at all</label>
-			<input type="radio" name="secondtime" value="notlikelyatall">
+			<input type="radio" name="secondtime" value="notlikelyatall" id="notlikelyatall">
 
 		</fieldset>
 		<input type="submit" name="submit">
